@@ -3,6 +3,13 @@
 
 2006-12-30 Daniel Leidert <daniel.leidert.spam@gmx.net>
 
+	* src/chemical-mime-database.xml.in: Made all acronym and
+	expanded-acronym elements untranslatable. The acronyms used here are
+	only hardly translatable, so we let it be.
+	(chemical/x-cdx, chemical/x-cdxml): Improved MIME type description.
+
+2006-12-30 Daniel Leidert <daniel.leidert.spam@gmx.net>
+
 	* autogen.sh: Fixed a typo.
 	(AUTOMAKE_FILES): Define list depending on the automake version.
 
